New Flight File Processing (#87)
* DAT File Processor

* csv file processing

* JSON Flight processing

* GPX File Processing code

* Attempt at porting over more DAT processing code

* JSON File processing with new code

* Part of CSVFileProcessing

* Remove connection params from DATFileProcessor

* Probably working general csv parsing

* CSV File Processor

* Remove storing Maps and FlightMeta in JSONFileProcessor instance

* GPX processor

* Integrate processors into the process upload class

* More maintainable way of adding new flight file processors in the future

* Fixed some compile errs in procupload. Still need to fix issue with convertAndInsert in dat file

* DAT File changes. Modified FlightFileProcessor to do var args to support this

* Add todo comment

* Procesor docstrings

* JavaDocs for FFP

* Modify how the processors map is inited

* Kotlin moment